--- a/react/src/components/full-page-loader.module.css
+++ b/react/src/components/full-page-loader.module.css
@@ -1,23 +1,9 @@
 .loader {
-	align-items: center;
-	background-color: rgb(0, 0, 0, 0.1);
-	display: none;
-	height: 100vh;
-	inset: 0;
-	justify-content: center;
-	opacity: 0;
-	position: absolute;
 	transition: opacity 0.5s ease-in-out, display 0.5s ease-in-out allow-discrete;
-	width: 100vw;
-}
-
-.visible {
-	display: flex;
-	opacity: 1;
 }
 
 @starting-style {
-	.loader.visible {
+	.loader {
 		opacity: 0;
 	}
 }
